--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       // Constants for API interaction
       const MODEL_NAME = 'gemini-2.5-flash-preview-05-20';
-      const API_KEY = ""; // Canvas will provide this at runtime
+      const API_KEY = "AIzaSyD7htSrSo7VTHpmA_PduNBF-m3Xwzafjf0"; // Canvas will provide this at runtime
 
       // Function to scroll the output area to the bottom
       const scrollToBottom = () => {
